# crimeDeployment

./: README.md
prevention/: Dockerfile  data.json  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
prevention/camps/: admin.py  models.py  serializers.py  urls.py  views.py
prevention/camps/migrations/: 0001_initial.py  0002_remove_camps_date.py  0003_camps_created_at.py  0004_remove_camps_created_at.py  0005_camps_date.py
prevention/communities/: admin.py  models.py  serializers.py  urls.py  views.py
prevention/communities/migrations/: 0001_initial.py  0002_alter_comments_upload_time.py  0003_alter_comments_upload_time.py  0004_alter_comments_upload_time.py  0005_alter_comments_upload_time.py  0006_alter_comments_upload_time.py  0007_alter_comments_upload_time.py  0008_comments_likes_reply_likes_and_more.py  0009_alter_comments_upload_time.py  0010_alter_comments_upload_time.py  0011_alter_comments_upload_time.py  0012_alter_comments_upload_time.py  0013_alter_comments_upload_time.py  0014_alter_comments_upload_time.py  0015_alter_comments_upload_time.py  0016_alter_comments_upload_time.py  0017_alter_comments_upload_time.py  0018_alter_comments_upload_time.py  0019_alter_comments_upload_time.py  0020_alter_comments_upload_time.py  0021_alter_comments_upload_time.py  0022_alter_comments_upload_time.py  0023_alter_comments_upload_time.py  0024_alter_comments_upload_time.py  0025_alter_comments_upload_time.py  0026_alter_comments_upload_time.py  0027_alter_comments_upload_time.py  0028_alter_comments_upload_time.py  0029_alter_comments_upload_time.py  0030_alter_comments_upload_time.py  0031_alter_comments_upload_time.py  0032_alter_comments_upload_time_follow.py  0033_alter_comments_upload_time.py
prevention/local/: settings.dev.py
prevention/prevention/: asgi.py  urls.py  wsgi.py
prevention/prevention/settings/: __init__.py  base.py  envvars.py
prevention/profiles/: models.py  serializers.py  urls.py  views.py
prevention/profiles/migrations/: 0001_initial.py
prevention/user/: serializers.py  urls.py  views.py
prevention/utils/: auth.py  collections.py  misc.py  settings.py
(+1 files in other folders)
